Update for latest ea build